--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -99,6 +99,7 @@ const Demo3D = function() {
     this.directionalLightCastShadows = true;
     this.directionalLightShadowIntensity = 1.0;
     this.edgeRadius = 0.3;
+    this.roundedRoof = true;
     this.fps = 0;
     this.continuousRedraw = true;
 
@@ -343,6 +344,7 @@ window.onload = function() {
     const buildingColor = buildings.addInput(demo3d, 'buildingColor');
     const buildingOpacity = buildings.addInput(demo3d, 'buildingOpacity', {min:0.0, max:1.0});
     const edgeRadius = buildings.addInput(demo3d, 'edgeRadius');
+    const roundedRoof = buildings.addInput(demo3d, 'roundedRoof');
     const lightIntensity = buildings.addInput(demo3d, 'lightIntensity', {min:0.0, max:1.0});
     buildings.on('change', (ev) => {
         map.setPaintProperty(demo3d.buildingExtrusion, 'fill-extrusion-vertical-gradient', demo3d.verticalGradient);
@@ -350,6 +352,7 @@ window.onload = function() {
             'rgb(' + demo3d.buildingColor.r + ', ' + demo3d.buildingColor.g + ', ' + demo3d.buildingColor.b + ')');
         map.setPaintProperty(demo3d.buildingExtrusion, 'fill-extrusion-opacity', demo3d.buildingOpacity);
         map.setLayoutProperty(demo3d.buildingExtrusion, 'fill-extrusion-edge-radius', demo3d.edgeRadius);
+        map.setPaintProperty(demo3d.buildingExtrusion, 'fill-extrusion-rounded-roof', demo3d.roundedRoof);
 
         const light = map.getLight();
         light['intensity'] = demo3d.lightIntensity;
